# Fast-api-nastolki

Fast api project/: README.md  board_games.db  pyproject.toml  requirements.txt  test_board_games.db
Fast api project/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  site.py
Fast api project/tests/: conftest.py  test_auth.py  test_games.py  test_sessions_reviews_analytics.py
